alignment correction

--- a/css/style.css
+++ b/css/style.css
@@ -599,7 +599,7 @@ button {
 /** gallery  section **/
 
 .gallery {
-     padding: 20px 0px 40px 0px;
+     padding: 0px 0px 40px 0px;
      background-color: #D8D8D8;
 }
 
